k8s-deploy/eshop-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-web
  template:
    metadata:
      labels:
        app: eshop-web
    spec:
      containers:
      - name: eshop-web
        image: eshop-web
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-web
spec:
  type: ClusterIP
  selector:
    app: eshop-web
  ports:
  - port: 80
    protocol: TCP
